Change Transaction class to record

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,6 +4,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <AnalysisLevel>latest</AnalysisLevel>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 </Project>
